src/objects/acpl__AP_Question__c.object
<CustomObject>
    <fields>
        <fullName>acpl__AA_answer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>acpl__AA_answer_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answer checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acpl__AA_answer_currency__c</fullName>
        <label>Answer currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acpl__AA_answer_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acpl__AA_answer_is_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answer is checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acpl__AA_answer_number__c</fullName>
        <label>Answer number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acpl__AA_answer_text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>acpl__AA_answer_text_area__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer text area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>acpl__gf_account_planning_id__c</fullName>
        <label>Account Planning</label>
        <referenceTo>acpl__Account_Planning__c</referenceTo>
        <relationshipLabel>Account Planning Questions</relationshipLabel>
        <relationshipName>Account_Planning_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_answer_form_desc__c</fullName>
        <formula>IF(acpl__AA_answer_checkbox__c,&apos;true&apos;,
    IF(AND
    (
        ISBLANK(acpl__AA_answer_currency__c),
        ISBLANK(acpl__AA_answer_date__c),
        ISBLANK(acpl__AA_answer_number__c),
        ISBLANK(acpl__AA_answer_text__c),
        ISBLANK(acpl__AA_answer_text_area__c),
        acpl__AA_answer_is_checkbox__c
    ),&apos;false&apos;,&apos;&apos;)
)
&amp; TEXT(acpl__AA_answer_currency__c)
&amp; TEXT( acpl__AA_answer_date__c )
&amp; TEXT(acpl__AA_answer_number__c)
&amp; acpl__AA_answer_text__c
&amp; acpl__AA_answer_text_area__c</formula>
        <label>Answer formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_question_form_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <label>Account Planning Question</label>
    <listViews>
        <fullName>Questions_Catalog_List_View</fullName>
        <columns>NAME</columns>
        <columns>acpl__gf_ap_question_form_desc__c</columns>
        <columns>acpl__gf_account_planning_id__c</columns>
        <columns>acpl__AA_answer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acpl__gf_account_planning_id__c</field>
            <operation>equals</operation>
            <value>Question Catalog</value>
        </filters>
        <label>Catalogo de Preguntas</label>
        <sharedTo>
            <group>AP_Administration</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>acpl__All</fullName>
        <columns>NAME</columns>
        <columns>acpl__gf_ap_question_form_desc__c</columns>
        <columns>acpl__gf_account_planning_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Planning Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Planning Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>